[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11.12", features = ["blocking"] }
serde = { version = "1.0.144", features = ["derive"] }
toml = "0.5.9"
walkdir = "2.3.2"
zip = { version = "0.6.2", default-features = false }
